# Bibliographer

./: .env.example  .gitignore  README.md  example_state.json  pyproject.toml
agent/: README.md  apis.py  eval.py  loop.py  main.py  state.py  synthesis.py  tools.py
day1/: 01_schema_parser.py  02_react_loop.py  README.md
day2/: 01_api_tools.py  02_evaluator.py  03_citation_graph.py  README.md
day3/: 01_robust_state.py  02_human_in_loop.py  README.md
day4/: 01_theme_clusterer.py  02_bibtex_builder.py  03_prose_generator.py  04_rigor_checker.py  README.md
shared/: llm_client.py
